[package]
name = "printbl"
version = "0.1.0"
edition = "2021"
authors = ["Stevin Wilson <stevin@protonmail.com>"]
description = "Pretty print table files"
readme = "README.md"
license = "MIT"
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.12", features = ["cargo"] }
polars = { version = "0.35.4", features = ["lazy", "temporal", "describe", "json", "parquet", "dtype-datetime"] }